# weather_collector

./: .gitignore  Dockerfile  Makefile  NAM_table_0.csv  NAM_table_1.csv  README.md  main.py  pyproject.toml
cdk/: app.py  config.py
cdk/stacks/: data_pipeline_stack.py  forecast_collector_stack.py
src/: collector.py  handler.py
tests/app/: test_collector.py
tests/cdk/: test_forecast_collector_stack.py
