[project]
name = "weather-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.199.0",
    "boto3>=1.38.27",
    "constructs>=10.4.2",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "selenium>=4.33.0",
    "webdriver-manager>=4.0.2",
]
